complete header section design

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3 Architects</title>
     <link rel="stylesheet" href="./sryles/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./sryles/responsive.css">
 
 </head>
 <body>
@@ -17,7 +19,18 @@
                     <li>contact us</li>
                     <li>login</li>
                 </ul>
+                <div class="menu"><i class="fa-solid fa-bars"></i></div>
             </nav>
+            <div class="content">
+                <h1>Brand New <br>
+                    Group of Architects 
+                    </h1>
+                    <p class="para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                    <button class="btn">Explore More</button>
+            </div>
+            <div class="banner">
+                <img src="./images/banner.png" alt="">
+            </div>
     </header>
 </body>
 </html>
