--- a/index.html
+++ b/index.html
@@ -32,5 +32,29 @@
                 <img src="./images/banner.png" alt="">
             </div>
     </header>
+    <!-- quick-fix  -->
+    <section>
+        <main class="quick-fix">
+            <div class="teams">
+                <div>
+                    <img src="./images/team1.png" alt="">
+                </div>
+                <div>
+                    <img src="./images/team2.png" alt="">
+                </div>
+                <div>
+                    <img src="./images/team3.png" alt="">
+                </div>
+                <div>
+                    <img src="./images/team4.png" alt="">
+                </div>
+            </div>
+            <div class="content">
+                <h2 class="font-lz">Quick list <span class="black">of Our</span><span class="orenge"> Features</span></h2>
+                <p class="para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn">Explore More</button>
+            </div>
+        </main>
+    </section>
 </body>
 </html>
