--- a/index.html
+++ b/index.html
@@ -56,5 +56,35 @@
             </div>
         </main>
     </section>
+    <section>
+        <div class="features">
+            <div class="content">
+                <div class="features-title">
+                    <h2 class="font-lz">Features you will <br> love & enjoy</h2>
+                    <p class="para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                </div>
+                <div class="ftrs">
+                    <h3 class="font-md">Dexktop & Mobile Version</h3>
+                    <p class="para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="ftrs">
+                    <h3 class="font-md">Drag & Drop Builder</h3>
+                    <p class="para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="ftrs">
+                    <h3 class="font-md">Awesome Modern Design</h3>
+                    <p class="para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="ftrs">
+                    <h3 class="font-md">Super Easy to Edit</h3>
+                    <p class="para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+            </div>
+            <div class="arch">
+                <img src="./images/architect.png" alt="">
+                <button class="btn"><span class="big">10+Year</span><span class="Experience">Experience</span></button>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
