add some fact and sponsors section

--- a/index.html
+++ b/index.html
@@ -86,5 +86,62 @@
             </div>
         </div>
     </section>
+    <!-- some fact section  -->
+     <section>
+        <div class="some-fact">
+            <div class="caption">
+                <h2 class="font-lz">Some Facts</h2>
+                <p class="para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="facts">
+                <div>
+                    <img src="./images/icons/ribon.png" alt="">
+                    <h2>54</h2>
+                    <p class="font-md gray">Awards Winnings</p>
+                </div>
+                <div>
+                    <img src="./images/icons/projects.png" alt="">
+                    <h2>1458</h2>
+                    <p class="font-md gray">Project Finished</p>
+                </div>
+                <div>
+                    <img src="./images/icons/customers.png" alt="">
+                    <h2>590</h2>
+                    <p class="font-md gray">Clients Worked</p>
+                </div>
+                <div>
+                    <img src="./images/icons/email.png" alt="">
+                    <h2>22578</h2>
+                    <p class="font-md gray">Email Send</p>
+                </div>
+            </div>
+        </div>
+     </section>
+     <!-- sposored section -->
+      <section>
+        <div class="sponsors">
+            <div class="title">
+                <h2 class="font-lz">Our Sponspors</h2>
+                <p class="para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="brands">
+                <div>
+                    <img src="./images/sponsors/spotify.png" alt="">
+                </div>
+                <div>
+                    <img src="./images/sponsors/google.png" alt="">
+                </div>
+                <div>
+                     <img src="./images/sponsors/google.png" alt="">
+                </div>
+                <div>
+                    <img src="./images/sponsors/amazon.png" alt="">
+                </div>
+                <div>
+                    <img src="./images/sponsors/telerama.png" alt="">
+                </div>
+            </div>
+        </div>
+      </section>
 </body>
 </html>
