add footer section and responsive done

--- a/index.html
+++ b/index.html
@@ -143,5 +143,10 @@
             </div>
         </div>
       </section>
+      <footer>
+        <div>
+            <p>All rights reserved copyright@2023 startup landing page design</p>
+        </div>
+      </footer>
 </body>
 </html>
